# TorchImager

./: .gitignore  CMakeLists.txt  LICENCE  MANIFEST.in  README.md  pyproject.toml  setup.py
TorchImager/: __init__.py  main.cu  main.hip
examples/: dnn.py  realtime.py  show_color.py  show_greyscale.py
examples/Lenia/: Lenia.py  visualize_kernels.py  visualize_lenia.py
